--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "dependencies": {
   	"bootstrap-sass-official": "~3.1.1",
-  	"font-awesome":"~4.1.0"
+  	"font-awesome": "~4.1.0",
+  	"jquery": "1.11.1"
   }
 }
