--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,8 @@
   "dependencies": {
   	"bootstrap-sass-official": "~3.1.1",
   	"font-awesome": "~4.1.0",
-  	"jquery": "1.11.1"
+  	"jquery": "~1.11.1",
+	"velocity": "~0.0.12",
+	"iscroll": "~5.1.1"
   }
 }
